# dictdb

./: .pre-commit-config.yaml  AUDIT.md  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
docs/: README.md  api.md  benchmark.md  development.md  getting-started.md  index.md  indexing.md  installation.md  logging.md  overview.md  queries.md  quickstart.md  roadmap.md  schema.md
docs/contributing/: README.md  development.md  publishing.md
docs/fr/: api.md  getting-started.md  index.md
docs/getting-started/: README.md  overview.md  quickstart.md
docs/guides/: README.md  logging.md  queries.md  query-dsl.md
docs/reference/: README.md  api.md
scripts/: benchmark.py
src/dictdb/: __init__.py  backup.py  condition.py  core.py  database.py  exceptions.py  index.py  logging.py  table.py  types.py
tests/: conftest.py  test_backup.py  test_condition.py  test_condition_extras.py  test_core.py  test_database.py  test_field_contains_edges.py  test_hash_index_edge.py  test_index_base.py  test_index_registry_errors.py  test_indexing.py  test_logging.py  test_persist_errors.py  test_persist_schema_save.py  test_persistence.py  test_table.py  test_table_extras.py  test_transactions.py
tests/core/: test_condition.py  test_condition_extras.py  test_logical_functions.py  test_optional_condition.py  test_rwlock.py
tests/index/: test_indexing.py
tests/obs/: test_logging.py
tests/query/: test_query_features.py
tests/storage/: test_backup.py  test_backup_concurrency.py  test_database.py  (+3 more)
(+28 files in other folders)
