[project]
name = "dictdb"
version = "0.1.0"
author = "Manoah Bernier"
description = "A Python package to manipulate dictionaries like databases."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sortedcontainers>=2.4.0",
]

[dependency-groups]
dev = [
    "coverage>=7.7.1",
    "mypy>=1.15.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = "sortedcontainers"
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
