[project]
name = "dctdb"
version = "1.1.0"
author = "Manoah Bernier"
description = "A Python package to manipulate dictionaries like databases."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7.7.1",
    "mypy>=1.15.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dictdb"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.bandit]
exclude_dirs = ["tests", "benchmarks"]
# B403: pickle is an intentional feature for persistence
skips = ["B403"]
